--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "agent": "node packages/agent-runner/dist/index.js",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx || true",
     "typecheck": "tsc -p tsconfig.json --noEmit || true",
-    "ci": "npm run lint && npm run typecheck"
+    "ci": "npm run lint && npm run typecheck",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "tsx": "^4.19.0",
@@ -18,6 +19,7 @@
     "prettier": "^2.8.8",
     "lint-staged": "^14.0.0",
     "commitlint": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0"
+    "@commitlint/config-conventional": "^17.0.0",
+    "husky": "^8.0.0"
   }
 }
