chore: lint: ignore dist & add overrides; fix lint/typecheck scripts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,4 +8,16 @@
     "no-console": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off"
   }
+  ,
+  "overrides": [
+    {
+      "files": ["**/dist/**", "**/*.config.js", "commitlint.config.js"],
+      "env": { "node": true },
+      "rules": {
+        "no-undef": "off",
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
 }
+
