--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "ci": "npm run lint && npm run typecheck",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "mkdir -p infra/supabase functions/edge && echo '# supabase infra' > infra/supabase/README.md && echo '# edge functions' > functions/edge/README.md",
+    "env": "mkdir env && echo 'SUPABASE_URL=REPLACE' > env/.env.example && git add env/.env.example && git commit -m 'chore: add env examples' && git push",
+    "set-secret": "gh secret set SUPABASE_KEY --body '...' ",
+    "protect-branch": "gh api repos/:owner/:repo/branches/master/protection --method PUT -f required_status_checks='{\"strict\":true,\"contexts\":[\"ci\"]}' -f required_pull_request_reviews='{\"required_approving_review_count\":1}'"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.0",
@@ -23,9 +27,15 @@
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.0",
-    "lint-staged": "^14.0.0",
+    "lint-staged": "^14.0.1",
     "prettier": "^2.8.8",
     "tsx": "^4.19.0",
     "typescript": "^4.9.5"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
