--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 ﻿{
-  "compilerOptions": { "strict": true, "skipLibCheck": true },
-  "files": []
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
+  },
+  "include": ["apps/*/src/**/*.ts", "apps/*/src/**/*.tsx", "packages/*/src/**/*.ts", "packages/*/src/**/*.tsx", "functions/*/src/**/*.ts", "functions/*/src/**/*.tsx", "src/**/*.ts", "src/**/*.tsx"]
 }
