--- a/.github/workflows/supabase-deploy.yml
+++ b/.github/workflows/supabase-deploy.yml
@@ -38,6 +38,37 @@ jobs:
           sudo apt-get install -y powershell
           pwsh -v || true
 
+      - name: Install psql (postgres client)
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y postgresql-client
+
+      - name: Apply migrations, RLS and seeds (psql)
+        if: ${{ secrets.SUPABASE_DB_URL != '' }}
+        env:
+          SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
+        run: |
+          set -euo pipefail
+          echo "Applying migrations using SUPABASE_DB_URL"
+          export PGSSLMODE=require
+          echo "Running migrations/0001_init.sql"
+          psql "${SUPABASE_DB_URL}" -f infra/supabase/migrations/0001_init.sql
+          echo "Running RLS policies"
+          psql "${SUPABASE_DB_URL}" -f infra/supabase/policies/rls_policies.sql
+          echo "Running seeds"
+          psql "${SUPABASE_DB_URL}" -f infra/supabase/seeds/seed_initial.sql
+
+      - name: Fallback: run Node SQL runner (when psql not available or as double-check)
+        if: ${{ secrets.SUPABASE_DB_URL != '' }}
+        env:
+          SUPABASE_DB_URL: ${{ secrets.SUPABASE_DB_URL }}
+        run: |
+          set -euo pipefail
+          echo "Installing node deps and running infra/supabase/run_sql.js"
+          # already have Node from setup-node above; install pg locally
+          npm ci --no-audit --no-fund || npm install pg --no-audit --no-fund
+          node infra/supabase/run_sql.js "${SUPABASE_DB_URL}"
+
       - name: Run supabase deploy script
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
