--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vite": "^7.1.9"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.58.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   }
