--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
                     "typecheck":  "tsc -p tsconfig.json --noEmit",
                     "ci":  "npm run lint \u0026\u0026 npm run typecheck",
                     "prepare":  "husky install",
-                    "postinstall":  "mkdir -p infra/supabase functions/edge \u0026\u0026 echo \u0027# supabase infra\u0027 \u003e infra/supabase/README.md \u0026\u0026 echo \u0027# edge functions\u0027 \u003e functions/edge/README.md",
+                    "postinstall":  "echo postinstall-completed",
                     "env":  "mkdir env \u0026\u0026 echo \u0027SUPABASE_URL=REPLACE\u0027 \u003e env/.env.example \u0026\u0026 git add env/.env.example \u0026\u0026 git commit -m \u0027chore: add env examples\u0027 \u0026\u0026 git push",
                     "set-secret":  "gh secret set SUPABASE_KEY --body \u0027...\u0027 ",
                     "protect-branch":  "gh api repos/:owner/:repo/branches/master/protection --method PUT -f required_status_checks=\u0027{\"strict\":true,\"contexts\":[\"ci\"]}\u0027 -f required_pull_request_reviews=\u0027{\"required_approving_review_count\":1}\u0027"
