--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-    "name":  "viking-hammer-crossfit-app",
-    "private":  true,
-    "workspaces":  [
-                       "apps/*",
-                       "packages/*",
-                       "functions/*",
-                       "infra/*"
-                   ],
-    "scripts":  {
-                    "agent":  "node packages/agent-runner/dist/index.js",
-                    "lint":  "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 0 || true",
-                    "typecheck":  "tsc -p tsconfig.json --noEmit",
-                    "ci":  "npm run lint \u0026\u0026 npm run typecheck",
-                    "prepare":  "husky install",
-                    "postinstall":  "echo postinstall-completed",
-                    "env":  "mkdir env \u0026\u0026 echo \u0027SUPABASE_URL=REPLACE\u0027 \u003e env/.env.example \u0026\u0026 git add env/.env.example \u0026\u0026 git commit -m \u0027chore: add env examples\u0027 \u0026\u0026 git push",
-                    "set-secret":  "gh secret set SUPABASE_KEY --body \u0027...\u0027 ",
-                    "protect-branch":  "gh api repos/:owner/:repo/branches/master/protection --method PUT -f required_status_checks=\u0027{\"strict\":true,\"contexts\":[\"ci\"]}\u0027 -f required_pull_request_reviews=\u0027{\"required_approving_review_count\":1}\u0027"
-                },
-    "devDependencies":  {
-                            "@commitlint/config-conventional":  "^17.0.0",
-                            "@types/node":  "^20.12.7",
-                            "@typescript-eslint/eslint-plugin":  "^6.10.0",
-                            "@typescript-eslint/parser":  "^6.10.0",
-                            "commitlint":  "^17.0.0",
-                            "eslint":  "^8.50.0",
-                            "eslint-config-prettier":  "^9.0.0",
-                            "husky":  "^8.0.0",
-                            "lint-staged":  "^14.0.1",
-                            "prettier":  "^2.8.8",
-                            "tsx":  "^4.19.0",
-                            "typescript":  "^4.9.5"
-                        },
-    "lint-staged":  {
-                        "*.ts":  [
-                                     "eslint --fix",
-                                     "git add"
-                                 ]
-                    },
-    "dependencies":  {
-                         "@supabase/supabase-js":  "^2.58.0"
-                     }
+    "name": "viking-hammer-crossfit-app",
+    "private": true,
+    "workspaces": [
+        "apps/*",
+        "packages/*",
+        "functions/*",
+        "infra/*"
+    ],
+    "scripts": {
+        "agent": "node packages/agent-runner/dist/index.js",
+        "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 0 || true",
+        "typecheck": "tsc -p tsconfig.json --noEmit",
+        "ci": "npm run lint && npm run typecheck",
+        "prepare": "husky install",
+        "postinstall": "echo postinstall-completed",
+        "env": "mkdir env && echo 'SUPABASE_URL=REPLACE' > env/.env.example && git add env/.env.example && git commit -m 'chore: add env examples' && git push",
+        "set-secret": "gh secret set SUPABASE_KEY --body '...' ",
+        "protect-branch": "gh api repos/:owner/:repo/branches/master/protection --method PUT -f required_status_checks='{\"strict\":true,\"contexts\":[\"ci\"]}' -f required_pull_request_reviews='{\"required_approving_review_count\":1}'"
+    },
+    "devDependencies": {
+        "@commitlint/config-conventional": "^17.0.0",
+        "@types/node": "^20.12.7",
+        "@typescript-eslint/eslint-plugin": "^6.10.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "commitlint": "^17.0.0",
+        "eslint": "^8.50.0",
+        "eslint-config-prettier": "^9.0.0",
+        "husky": "^8.0.0",
+        "lint-staged": "^14.0.1",
+        "prettier": "^2.8.8",
+        "tsx": "^4.19.0",
+        "typescript": "^4.9.5"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "eslint --fix",
+            "git add"
+        ]
+    },
+    "dependencies": {
+        "@supabase/supabase-js": "^2.58.0"
+    }
 }
