--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "vite": "^4.5.3"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.58.0",
+    "@supabase/supabase-js": "^2.74.0",
+    "@types/qrcode": "^1.5.5",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
