--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
         ]
     },
     "dependencies": {
-        "@supabase/supabase-js": "^2.58.0"
+        "@supabase/supabase-js": "^2.58.0",
+        "@types/qrcode": "^1.5.5",
+        "pg": "^8.16.3",
+        "qrcode": "^1.5.4"
     }
 }
