feat: implement QR scanner integration and mobile app setup
- QR scanner integration: removed separate page, added direct camera access
- Real-time statistics: implemented dynamic stats with actual member counts
- Camera functionality: added MediaStream API for QR code scanning
- Modal UI: added responsive QR scanner modal with member information
- Mobile infrastructure: set up Expo React Native mobile app
- Backend integration: enhanced server with QR validation and endpoints
- Development tools: added batch files for easy app startup
- Code quality: fixed TypeScript compilation errors

Features implemented:
- Direct QR scanning from Reception dashboard
- Real-time member statistics and activity tracking
- Camera controls with start/stop functionality
- QR validation with backend API integration
- Member check-in workflow with activity updates
- Mobile app ready for iOS/Android testing via Expo Go
- Comprehensive API endpoints for all app functionality

Ready for Phase 2: Member Management and UI improvements

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "@typescript-eslint/eslint-plugin": "^6.10.0",
         "@typescript-eslint/parser": "^6.21.0",
         "commitlint": "^17.0.0",
+        "cors": "^2.8.5",
         "eslint": "^8.50.0",
         "eslint-config-prettier": "^9.0.0",
+        "express": "^5.1.0",
         "husky": "^8.0.0",
         "lint-staged": "^14.0.1",
         "prettier": "^2.8.8",
