--- a/apps/mobile-gym/package.json
+++ b/apps/mobile-gym/package.json
@@ -9,14 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.12",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4"
+    "expo": "~47.0.0",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.70.5",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
+    "@types/react": "~18.0.0",
+    "typescript": "~4.6.3"
   },
   "private": true
 }
