--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "lint-staged": "^14.0.1",
         "prettier": "^2.8.8",
         "tsx": "^4.19.0",
-        "typescript": "^4.9.5"
+        "typescript": "~5.9.2"
     },
     "lint-staged": {
         "*.ts": [
