--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,21 @@
-﻿{
+{
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["apps/*/src/**/*.ts", "apps/*/src/**/*.tsx", "packages/*/src/**/*.ts", "packages/*/src/**/*.tsx", "functions/*/src/**/*.ts", "functions/*/src/**/*.tsx", "src/**/*.ts", "src/**/*.tsx"]
+  "include": [
+    "apps/*/src/**/*.ts",
+    "apps/*/src/**/*.tsx",
+    "packages/*/src/**/*.ts",
+    "packages/*/src/**/*.tsx",
+    "functions/*/src/**/*.ts",
+    "functions/*/src/**/*.tsx",
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ],
+  "extends": "expo/tsconfig.base"
 }
