--- a/apps/mobile-gym/package.json
+++ b/apps/mobile-gym/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react-native": "~0.70.6",
     "expo": "~47.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.70.5",
-    "react-native-web": "~0.19.6"
+    "react-dom": "18.1.0",
+    "react-native": "0.70.8",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@types/react": "~18.0.0",
