--- a/env/.env.dev
+++ b/env/.env.dev
@@ -1,3 +1,3 @@
-﻿SUPABASE_URL=REPLACE
-SUPABASE_KEY=REPLACE
+﻿SUPABASE_URL= 'https://nqseztalzjcfucfeljkf.supabase.co'
+SUPABASE_KEY= process.env.SUPABASE_KEY
 NODE_ENV=development
