--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
         ]
     },
     "dependencies": {
-        "@supabase/supabase-js": "^2.58.0",
+        "@supabase/supabase-js": "^2.75.1",
         "@types/qrcode": "^1.5.5",
+        "bcrypt": "^6.0.0",
+        "dotenv": "^17.2.3",
+        "jsonwebtoken": "^9.0.2",
         "pg": "^8.16.3",
         "qrcode": "^1.5.4"
     }
