--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "dotenv": "^17.2.3",
         "jsonwebtoken": "^9.0.2",
         "pg": "^8.16.3",
-        "qrcode": "^1.5.4"
+        "qrcode": "^1.5.4",
+        "resend": "^6.2.2"
     }
 }
