--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "bcrypt": "^6.0.0",
         "dotenv": "^17.2.3",
         "jsonwebtoken": "^9.0.2",
+        "node-fetch": "^2.7.0",
         "pg": "^8.16.3",
         "qrcode": "^1.5.4",
         "resend": "^6.2.2"
