--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.74.0",
     "@types/qrcode": "^1.5.5",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jsqr": "^1.4.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^16.2.3"
   }
 }
