--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.74.0",
     "@types/qrcode": "^1.5.5",
+    "express-rate-limit": "^8.2.1",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "jsqr": "^1.4.0",
