--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@types/qrcode": "^1.5.5",
         "bcrypt": "^6.0.0",
         "dotenv": "^17.2.3",
+        "express-rate-limit": "^7.4.1",
         "jsonwebtoken": "^9.0.2",
         "node-fetch": "^2.7.0",
         "pg": "^8.16.3",
