--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "express-rate-limit": "^8.2.1",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "jsqr": "^1.4.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
