--- a/mobile/app/package.json
+++ b/mobile/app/package.json
@@ -6,18 +6,27 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+  "web:dev": "webpack serve --config webpack.config.js --mode development --port 9090",
+    "web:build": "webpack --config webpack.config.js --mode production"
   },
   "dependencies": {
     "expo": "~54.0.23",
+    "expo-linear-gradient": "~15.0.7",
     "expo-localization": "^17.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
+    "@expo/webpack-config": "^19.0.1",
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   },
   "private": true
 }
